--- a/index.html
+++ b/index.html
@@ -10,6 +10,45 @@
 </head>
 <body>
     
+
+    <div class="container">
+          <div class="row">
+              <div class="col-md-6"></div>
+              <div class="col-md-6">
+                <table class="table table-dark mt-5">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>@twitter</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </div>
+          </div>
+
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
