--- a/index.html
+++ b/index.html
@@ -12,16 +12,34 @@
     
 
     <div class="container">
+
+        <h1 class="text-center mt-5"> What do you want to find?</h1>
           <div class="row">
-              <div class="col-md-6"></div>
+              <div class="col-md-6 mt-5">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Filter by</label>
+                    <input  type="email" class="form-control" id="exampleFormControlInput1" placeholder="what are you looking for?" 
+                    oninput="getInput()"
+                    >
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleFormControlSelect1">Example select</label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                      <option>Name</option>
+                      <option>UserName</option>
+                      <option>Email</option>
+                      
+                    </select>
+                  </div>
+              </div>
               <div class="col-md-6">
-                <table class="table table-dark mt-5">
+                <table class="table table-borderless table-dark">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">UserName</th>
+                        <th scope="col">Email</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -39,13 +57,11 @@
                       </tr>
                       <tr>
                         <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
+                        <td colspan="2">Larry the Bird</td>
                         <td>@twitter</td>
                       </tr>
                     </tbody>
                   </table>
-              </div>
           </div>
 
     </div>
